--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@ lang: en
 prefer_datetime_locale:
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone: en
+timezone: Europe/London
+
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
