--- a/_config.yml
+++ b/_config.yml
@@ -100,21 +100,22 @@ comments:
   active: giscus        # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
-    shortname:    # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+    shortname:   haotian-ma-com # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
   # utterances settings › https://utteranc.es/
   utterances:
-    repo:         # <gh-username>/<repo>
+    repo:        tsdreamer/tsdreamer.github.io # <gh-username>/<repo>
     issue_term:   # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
     repo: TSdreamer/TSdreamer.github.io
     repo_id: 746808097
-    category: Comments
-    category_id: DIC_kwDODy-1C84CSN7z
+    category: Announcements
+    category_id: DIC_kwDOLINjIc4Cc7Vt
     mapping: pathname          # optional, default to 'pathname'
     input_position: bottom  # optional, default to 'bottom'
     lang: en            # optional, default to the value of `site.lang`
     reactions_enabled: 1
+
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
